--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -30,7 +30,7 @@
       <a href='{{ absLangURL (default "about/" $s.introURL) }}' class="button mt-1" role="button" title='{{ $r }}'>{{ $r }}</a>
       {{- end }}
     {{- end }}
-    {{ if and (gt .WordCount 400 ) ($s.toc) }}
+    {{ if and (gt .WordCount 400 ) (gt (len .TableOfContents) 180) ($s.toc) }}
     <div class="post_toc">
       <h2>{{ T "overview" }}</h2>
       {{ .TableOfContents }}
