--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -1,9 +1,13 @@
 {{ if isset .Params "series" }}
 {{$related := where .Site.RegularPages ".Params.series" "eq" .Params.series }}
+{{- $relatedLimit := default 8 .Params.numberOfRelatedPosts }}
 	<h2 class="post_related">{{ T "series_posts" }}{{ .Params.series }}</h2>
 	<ul>
-	  {{ range $related }}
+	  {{ range first $relatedLimit $related }}
 	      <li><a href="{{ .Permalink }}" class="nav-link" title="{{ .Title }}">{{ .Title }}</a></li>
+	  {{ end }}
+	  {{ if gt (len $related) $relatedLimit }}
+		<li><a href="/series/{{ lower .Params.series }}/">See all {{ .Params.series }}</a></li>
 	  {{ end }}
 	</ul>
 {{ end }}
