--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -12,7 +12,7 @@
   {{- if $showDate }}
     <span>{{ partial "sprite" (dict "icon" "calendar") }}</span>
     <span class="post_date">
-      {{ $postDate -}}{{- if ne $postDate $updateDate }} ({{ T "updated" }}: {{ $updateDate -}}){{- end }} 
+      {{ $postDate -}}{{- if ne $postDate $updateDate }} <span>{{- partial "sprite" (dict "icon" "edit") -}}</span>{{- $updateDate -}}{{- end }} 
     </span>
     {{- $scratch.Set "writeSeparator" true }}
   {{- end }}
