prevent inline code from inserting line breaks mid-word

--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -59,3 +59,9 @@ html, body
         padding-left: 0.5rem
         padding-bottom: 0.01rem
         font-size: 1rem
+
+// code overrides
+code
+    word-break: normal
+    &.noClass
+        line-break: normal
