--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -7,6 +7,14 @@ html, body
     &_brand
         img
             max-height: 2rem
+    // search box
+    &-item
+        display: grid
+        align-items: center
+        .search
+            @media screen and (min-width: 992px)
+                margin-right: 1.5rem
+
 
 // Magic for collapsing content, borrowed from https://www.digitalocean.com/community/tutorials/css-collapsible
 .lbl-toggle
@@ -65,3 +73,58 @@ code
     word-break: normal
     &.noClass
         line-break: normal
+
+
+// search from https://github.com/onweru/compose
+.search
+  flex: 1
+  display: flex
+  justify-content: flex-end
+  position: relative
+  &_field
+    padding: 0.5rem 1.5rem 0.5rem 2.5rem
+    border-radius: 1.5rem
+    width: 13.5rem
+    outline: none
+    border: none
+    background: transparent
+    color: var(--text)
+    box-shadow: 0 1rem 4rem rgba(0,0,0,0.17)
+    font-size: 1rem
+  &_label
+    width: 1rem
+    height: 1rem
+    position: absolute
+    left: 0.33rem
+    top: 0.25rem
+    opacity: 0.33
+    svg
+      width: 100%
+      height: 100%
+      fill: var(--text)
+  &_result
+    padding: 0.5rem 1rem
+    &:not(.passive):hover
+      background-color: var(--theme)
+      color: var(--light)
+    &.passive
+      display: grid
+    &s
+      width: 13.5rem
+      background-color: var(--bg)
+      border-radius: 0 0 0.25rem 0.25rem
+      box-shadow: 0 1rem 4rem rgba(0,0,0,0.17)
+      position: absolute
+      top: 125%
+      display: grid
+      overflow: hidden
+      z-index: 5
+      &:empty
+        display: none
+  &_title
+    padding: 0.5rem 1rem 0.5rem 1rem
+    background: var(--theme)
+    color: var(--light)
+    font-size: 0.9rem
+    opacity: 0.87
+    text-transform: uppercase
