minor search tweaks

--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -8,13 +8,13 @@ html, body
         img
             max-height: 2rem
     // search box
-    &-item
+    &_search
         display: grid
         align-items: center
         .search
             @media screen and (min-width: 992px)
                 margin-right: 1.5rem
-
+                
 
 // Magic for collapsing content, borrowed from https://www.digitalocean.com/community/tutorials/css-collapsible
 .lbl-toggle
