--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -14,6 +14,10 @@ html, body
         .search
             @media screen and (min-width: 992px)
                 margin-right: 1.5rem
+
+.sidebar
+    &_badge
+      max-height: 8rem 
                 
 
 // Magic for collapsing content, borrowed from https://www.digitalocean.com/community/tutorials/css-collapsible
