--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,11 @@
         <i>{{- T "old_content_note" -}}</i>
       </div>
     {{- end -}}
-    {{- partial "image-feature" . }}
+    {{- if .Params.featureImage -}}
+      <div class="post_featured">
+        {{- partial "image" (dict "file" .Params.featureImage "type" "featured") }}
+      </div>
+    {{- end -}}
     {{ if and (gt .WordCount 400 ) (gt (len .TableOfContents) 180) ($s.toc) }}
     <div class="post_toc">
       <div class="wrap-collapsible">
