switch to built-in search but placed in top nav intead of sidebar

--- a/assets/sass/_override.sass
+++ b/assets/sass/_override.sass
@@ -32,3 +32,12 @@ html
             &.tip
                 border-color: hsl(93, 85%, 32%)
                 background: hsl(93, 100%, 21%)
+
+    // search
+    .search
+        max-width: 20rem
+        margin: 0.4rem 0 0.4rem 0
+        &_field
+            background: var(--translucent-light)
+            color: var(--light)
+
