--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,7 +28,7 @@
         {{- partial "image" (dict "file" $p.featureImage "alt" $p.featureImageAlt "cap" $p.featureImageCap "type" "featured" "Page" $.Page) }}
       </div>
     {{- end -}}
-    {{ if and (gt .WordCount 400 ) (gt (len .TableOfContents) 180) ($p.toc) }}
+    {{ if and (gt .WordCount 400 ) (gt (len .TableOfContents) 180) ($s.toc) }}
     <div class="post_toc">
       <div class="wrap-collapsible">
         <input id="collapsible" class="toggle" type="checkbox">
