theme updates to 829f6816d4b82f5aa02b5740ec7899a746a99dfe

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,7 +31,7 @@
         {{- partial "logo" (dict "logo" $logo "class" "nav_center") }}
       {{- end }}
       <li class="search">
-        {{ partialCached "search/widget" . }}
+        {{ partial "search/widget" . }}
       </li>
       {{- partialCached "follow" . }}
     </div>
